# AIROS

./: .gitignore  README.md  findings.md  progress.md  task_plan.md
docs/: AIROS_autonomous_navigation_technical_route.md  AIROS_phased_execution_plan.md  advanced_planning_research_profile.md  environment_baseline.md  go2w_fast_lio_upgrade_notes.md  open_source_references.md  planner_comparison_showcase_2026-05-17.md  (+3 more)
src/airos_control/: CMakeLists.txt  package.xml
src/airos_control/config/: go2w_controllers.yaml
src/airos_control/launch/: control.launch.py
src/airos_experiments/: package.xml  setup.cfg  setup.py
src/airos_experiments/airos_experiments/: advanced_planner_candidate.py  clean_batch_runner.py  cross_level_evidence_probe.py  dynamic_joint_state_relay.py  fast_lio_frame_alignment.py  fast_lio_localization_bridge.py  fast_lio_map_aligner.py  imu_republisher.py  initial_pose_publisher.py  lifecycle_activator.py  livox_custom_bridge.py  metrics_summarizer.py  nav_chain_smoke_probe.py  nav_trial_runner.py  planner_comparison_node.py  pointcloud_colorizer.py  pointcloud_emulator.py  route_graph_verifier.py  rviz2_safe.py  scan_emulator.py  sdf_geometry.py  slam_map_saver.py  slam_nav_coordinator.py  slam_scan_projector.py  slam_traversability_graph.py  terrain_goal_publisher.py  terrain_pct_planner.py  world_map_generator.py
src/airos_experiments/launch/: dynamic_obstacles.launch.py  planner_comparison.launch.py  visual_fast_lio_navigation.launch.py  visual_navigation.launch.py  visual_slam_mapping.launch.py
src/airos_experiments/missions/: advanced_indoor_ramp_missions.yaml  large_complex_go2w_missions.yaml  realistic_multilevel_ramp_missions.yaml  single_floor_lab_missions.yaml
src/airos_experiments/scripts/: run_clean_nav_batch.py  run_nav_trials.py  summarize_trials.py
src/airos_experiments/test/: test_advanced_planner_candidate.py  test_control_command_chain.py  test_cross_level_evidence_probe.py  test_deep_upgrade_artifacts.py  test_dynamic_joint_state_relay.py  test_fast_lio_frame_alignment.py  test_flake8.py  test_livox_custom_bridge.py  test_metrics_summarizer_exports.py  test_planner_comparison_node.py  test_pointcloud_colorizer.py  test_route_graph_verifier.py  test_scan_emulator_anchor.py  test_slam_scan_projector.py  test_slam_traversability_graph.py  test_terrain_pointcloud_planner.py  test_visual_pointcloud_config.py
(+82 files in other folders)
